--- a/ex04/menu.css
+++ b/ex04/menu.css
@@ -15,6 +15,11 @@
     margin: 0px 5px;
     color: white;
     background-color: darkblue;
+    transition: box-shadow 0.5s;
+}
+
+.nav-item:hover{
+    box-shadow: inset 0px 0px 15px 0px aqua;
 }
 
 .nav.nav-horisontal{
